# corgi-string

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.bat
.github/workflows/: Actions.yml
cmake/: Config.cmake.in
include/corgi/string/: CMakeLists.txt  string.h
src/: CMakeLists.txt  string.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  main_tests.cpp
